fix: 处理html中和css中图片

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,9 @@
     <h1 class="title">
         测试页面是否加载成功
     </h1>
+    <div class="img-one"></div>
+    <div class="img-two"></div>
+    <img src="../src/assets/img/五角星.png" style="width:200px; height: 200px;">
+    <img src="../src/assets/img/background.png" style="width:200px; height: 200px;">
 </body>
 </html>
