--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,8 @@
     <div class="img-two"></div>
     <img src="../src/assets/img/五角星.png" style="width:200px; height: 200px;">
     <img src="../src/assets/img/background.png" style="width:200px; height: 200px;">
+    <div class="beautiful-font">
+        我是好看字体
+    </div>
 </body>
 </html>
